--- a/styles/styles.less
+++ b/styles/styles.less
@@ -94,6 +94,57 @@ body {
 		margin-bottom: 20px;
 	}
 
+	.stats {
+        width: 100%;
+        background-color: @grey;
+        transition: all .3s ease;
+        text-align: center;
+        line-height: 50px;
+        height: 50px;
+        overflow: hidden;
+
+        &.open {
+            height: 400px;
+            opacity: 1;
+            cursor: auto;
+        }
+
+        &.closed {
+            height: 50px;
+            opacity: 0.7;
+            cursor: 'pointer';
+        }
+
+        &:hover {
+            opacity: 1;
+        }
+
+        .stats-box {
+            display: inline-block;
+            position: relative;
+            width: 200px;
+            height: 200px;
+            font-weight: 100;
+            margin: 100px 20px;
+            float: left;
+
+            svg {
+                transition: all .2s ease;
+
+                path {
+                    opacity: 0.5;
+                    transition: all .2s ease;
+                    pointer-events:all;
+                    fill:none;
+
+                    &:hover {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+    }
+
 	ul {
 		width: 100%;
 		position: relative;
