--- a/styles/styles.less
+++ b/styles/styles.less
@@ -66,10 +66,52 @@ span {
   100% { opacity: 0; }
 }
 
+@-moz-keyframes breathe {
+  0%   { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+@-ms-keyframes breathe {
+  0%   { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+@keyframes breathe {
+  0%   { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
 @-webkit-keyframes scaleout {
   0% { -webkit-transform: scale(0.0) }
   100% {
     -webkit-transform: scale(1.0);
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes scaleout {
+  0% { -moz-transform: scale(0.0) }
+  100% {
+    -moz-transform: scale(1.0);
+    opacity: 0;
+  }
+}
+
+@-ms-keyframes scaleout {
+  0% { -ms-transform: scale(0.0) }
+  100% {
+    -ms-transform: scale(1.0);
+    opacity: 0;
+  }
+}
+
+@keyframes scaleout {
+  0% { transform: scale(0.0) }
+  100% {
+    transform: scale(1.0);
     opacity: 0;
   }
 }
@@ -89,6 +131,9 @@ body {
 		border-radius: 100%;
 		background-color: #26292c;
 		-webkit-animation: breathe 2s infinite;
+		-moz-animation: breathe 2s infinite;
+		-ms-animation: breathe 2s infinite;
+		animation: breathe 2s infinite;
 		margin: 50px;
 		margin-left: 45px;
 		margin-bottom: 20px;
@@ -114,6 +159,9 @@ body {
 		  	background-color: #333;
 		  	border-radius: 100%;  
 		  	-webkit-animation: scaleout 1.0s infinite ease-in-out;
+		  	-moz-animation: scaleout 1.0s infinite ease-in-out;
+		  	-ms-animation: scaleout 1.0s infinite ease-in-out;
+		  	animation: scaleout 1.0s infinite ease-in-out;
 		}
 
 		li {
